[gd_scene load_steps=2 format=3 uid="uid://ccklc4fndf0rc"]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_he5h3"]

[node name="Settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_he5h3")

[node name="Resume" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
offset_right = 400.0
offset_bottom = 100.0
text = "Resume
"

[node name="Quit" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
grow_vertical = 2
text = "Quit
"

[node name="CheckButton" type="CheckButton" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
grow_vertical = 0
text = "Music
"
alignment = 1

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
